updated Gradle, fixed DebugHudMixin and InGameHudMixin not disabling when module was disabled & added code safety